added makefile and app config

--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,21 @@
-{sub_dirs, ["apps/bchat", "rel"]}.
+{sub_dirs, [
+	"apps/bchat", 
+	"rel"
+]}.
+
+{erl_opts, [
+	debug_info, 
+	% warnings_as_errors,
+	{parse_transform, lager_transform}
+]}.
+
+{require_otp_vsn, "R14|R15"}.
+
+{lib_dirs, ["deps", "apps"]}.
+
+{deps, [
+	{'lager', ".*", {git, "git://github.com/basho/lager.git", "master"}},
+	%{'cowboy', ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
+	%{'jsonerl', ".*", {git, "git://github.com/lambder/jsonerl.git", "master"}},
+	{'gproc', ".*", {git, "git://github.com/uwiger/gproc.git", "master"}}
+]}.
