first attempt at http interface

--- a/dev.config
+++ b/dev.config
@@ -1,5 +1,10 @@
 [
-	{bchat, []},
+	{bchat, [
+	    {http, [
+	        {port, 8096},
+	        {dispatch, [{'_', [{'_', bchat_http, []}]}]}
+	    ]} 
+	]},
 
 	{lager, [
 		{handlers, [
