--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 
 {deps, [
 	{'lager', ".*", {git, "git://github.com/basho/lager.git", "master"}},
-	%{'cowboy', ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
-	%{'jsonerl', ".*", {git, "git://github.com/lambder/jsonerl.git", "master"}},
+	{'cowboy', ".*", {git, "git://github.com/extend/cowboy.git", "master"}},
+	{'jsx', ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}},
 	{'gproc', ".*", {git, "git://github.com/uwiger/gproc.git", "master"}}
 ]}.
